Improved error handling for public api
